k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wisecow-deployment
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: nlb
    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: "arn:aws:acm:us-east-1:751762548634:certificate/adb4b011-99da-423f-9536-6afb9233cbec"
    service.beta.kubernetes.io/aws-load-balancer-ssl-ports: "443"
spec:
  selector:
    app: wisecow
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 4499
      nodePort: 31679   # External port on the node (you can choose any unused port)
    - name: https
      protocol: TCP
      port: 443
      targetPort: 4499
      nodePort: 31680
  type: LoadBalancer
